@@ -1,5 +1,5 @@
 [Desktop Entry]
-Categories=Games;
+Categories=Game;
 Comment=
 Comment[sv]=
 Encoding=UTF-8
